# coursework-server

./: CMakeLists.txt  README.md  login.bdb
src/: CLIApp.cpp  CLIApp.h  CertSocket.cpp  CertSocket.h  Database.cpp  Database.h  DatabaseManager.cpp  DatabaseManager.h  FileManager.cpp  FileManager.h  Record.cpp  Record.h  Socket.cpp  Socket.h  Table.cpp  Table.h  main.cpp
tables/: login.bdb
